rearange file provider

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ SERVICES_TRAEFIK_CROWDSEC_BOUNCER_IMAGE=fbonalair/traefik-crowdsec-bouncer
 SERVICES_TRAEFIK_CROWDSEC_BOUNCER_IMAGE_VERSION=latest
 SERVICES_TRAEFIK_CROWDSEC_BOUNCER_NETWORKS_CROWDSEC_IPV4=172.31.254.252
 
+# Service Nextcloud
+SERVICES_NEXTCLOUD_HOST_ADDRESS=`nextcloud.domain.tld`
+
 # Netzwerkeinstellungen
 NETWORKS_PROXY_NAME=proxy
 NETWORKS_PROXY_SUBNET_IPV4=172.30.0.0/16
