rearange file provider

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,5 @@ NETWORKS_PROXY_NAME=proxy
 NETWORKS_PROXY_SUBNET_IPV4=172.30.0.0/16
 NETWORKS_CROWDSEC_NAME=crowdsec
 NETWORKS_CROWDSEC_SUBNET_IPV4=172.31.0.0/16
+
+LETSENCRYPT_MAIL=mail@domain.tld
